@@ -1,12 +1,14 @@
 package com.vehicle.maintenance.config;
 
+import com.vehicle.maintenance.enums.Role;
 import com.vehicle.maintenance.model.User;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class UserPrincipal implements UserDetails {
@@ -14,18 +16,20 @@ public class UserPrincipal implements UserDetails {
     private final Long userId;
     private final String email;
     private final String password;
+    private final Role role;
     private final boolean active;
 
     public UserPrincipal(User user) {
         this.userId = user.getId();
         this.email = user.getEmail();
         this.password = user.getPasswordHash();
+        this.role = user.getRole();
         this.active = user.getIsActive();
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
